about intro refinement

--- a/pages/about.html
+++ b/pages/about.html
@@ -75,9 +75,9 @@
 
     <div id="myIntro" class="myArticles container-fluid">
         <h2>Hello,</h2>
-        <p>My name is <span>Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
-        <p><span style="color:silver">'Medicine is my destiny</span>,<span style="color:silver">'</span> or so I was told.  After obtaining a <span style="color:silver">University Degree</span> in <span style="color:silver">Biological Sciences</span>, I found a <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> as a professional in the <span style="color:silver">Pharmaceutical</span> space for over two decades.</p>
-        <p>At the mid-point of my career, I have decided to pursue my <span>childhood dream</span> of being a <span>Software Developer</span>.</p>
+        <p>My name is <span class="menloRegular text-white">Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
+        <p><span>'Medicine is my destiny</span>,<span>'</span> or so I was told.  After obtaining a <span>University Degree</span> in <span>Biological Sciences</span>, I found a <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> as a professional in the <span>Pharmaceutical</span> space for over two decades.</p>
+        <p>At the mid-point of my career, I have decided to pursue my <span>childhood dream</span> of being a <span class="menloRegular text-white">Software Developer</span>.</p>
         <p>Please join me on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
         <div class="row">
             <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
@@ -96,7 +96,7 @@
         </div>
         <div class='row'>
             <p class="col-sm-4"><span>Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
-            <p class="col-sm-7"><span>Dogs > cats</span>, but I like all animals, as long as they are not trying to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training.'</span></p>
+            <p class="col-sm-7"><span>Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training.'</span></p>
         </div>
         <div class="row">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
