--- a/pages/about.html
+++ b/pages/about.html
@@ -69,6 +69,19 @@
         <h1 style="color: black; text-shadow:1px 1px silver;">This page is currently under construction...</h1>
     </figure>
 
+    <!-- <section id="typeWriterSection">
+        <figure id='typeWriter' class="mx-auto">
+            <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
+                    style="color:darkmagenta;">replace</span>(</h2>
+            <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                    style="color: #00857c;">Pharmaceutical
+                    Engineer</span>',</h2>
+            <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                    style="color:lime;">Software
+                    Developer</span>');</h2>
+        </figure>
+    </section> -->
+
     <div id="greetingPic">
         <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
     </div>
@@ -96,7 +109,7 @@
         </div>
         <div class='row'>
             <p class="col-sm-4"><span>Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
-            <p class="col-sm-7"><span>Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training.'</span></p>
+            <p class="col-sm-7"><span>Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training</span>.<span>'</span></p>
         </div>
         <div class="row">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
@@ -105,7 +118,7 @@
         </div>
         <div class="row">
             <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span>driven</span> in circles as fast as I can.</p>
-            <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span>'It is the way.'</span></p>
+            <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span>'This is the way</span>.<span>'</span></p>
         </div>
     </div>
 
