--- a/pages/resume.html
+++ b/pages/resume.html
@@ -68,7 +68,7 @@
     <section id="typeWriterSection">
         <figure id='typeWriter' class="mx-auto">
             <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
-                    style="color:darkmagenta;">replace</span>(</h2>
+                    style="color:darkorchid;">replace</span>(</h2>
             <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
                     style="color: #00857c;">Pharmaceutical
                     Engineer</span>',</h2>
