--- a/pages/about.html
+++ b/pages/about.html
@@ -82,7 +82,7 @@
     <div id="myIntro" class="myArticles container-fluid">
         <h2>Hello,</h2>
         <p>My name is <span class="menloRegular text-white">Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
-        <p><span>'Medicine is my destiny</span>,<span>'</span> or so I was told.  After obtaining a <span>University Degree</span> in <span>Biological Sciences</span>, I found a <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> as a professional in the <span>Pharmaceutical</span> space for over two decades.</p>
+        <p>'Medicine is my destiny,' or so I was told.  I have a <span>Bachelor's Degree</span> in <span>Biological Sciences</span>, and my <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> was in the <span>Pharmaceutical Engineering</span> space for over two decades.</p>
         <p>At the mid-point of my career, I have decided to pursue my <span>childhood dream</span> of being a <span class="menloRegular text-white">Software Developer</span>.</p>
         <p>Please join me on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
         <div class="row">
