type writer updates

--- a/pages/about.html
+++ b/pages/about.html
@@ -68,9 +68,9 @@
     <section id="typeWriterSection">
         <figure id='typeWriter' class="mx-auto">
             <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span style="color:cornflowerblue">alive</span>) {</h2>
-            <h2 id="typeWriter2"><span style='color:rgb(50,50,50);'>__</span><span style='color:orange'>code</span>();</h2>
-            <h2 id="typeWriter3"><span style='color:rgb(50,50,50);'>__</span><span style='color:orange'>track</span>(<span style='color:cornflowerblue;'>macros</span>);</h2>
-            <h2 id="typeWriter4"><span style='color:rgb(50,50,50);'>__</span><span style='color:orange'>lift</span>(<span style='color:cornflowerblue'>weights</span>);</h2>
+            <h2 id="typeWriter2"><span style='color:rgb(50,50,50);'>__</span><span style='color:orange'>code</span>()<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter3"><span style='color:rgb(50,50,50);'>__</span><span style='color:orange'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter4"><span style='color:rgb(50,50,50);'>__</span><span style='color:orange'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span style='color:gray;'>;</span></h2>
             <h2 id="typeWriter5">}</h2>
         </figure>
     </section>
