--- a/pages/blog.html
+++ b/pages/blog.html
@@ -65,21 +65,19 @@
         </div>
     </nav>
 
-    <div class="container-fluid myArticles">
-        <h1 class="text-center" style="color:white;">Thanks for visiting my Blog!</h1>
-        <hr style="color:transparent;">
-        <h3 class="text-center">These are reflections of my experience during the MIT xPro Coding Bootcamp.</h3>
-    </div>
-
-    <!-- <section id="typeWriterSection">
+    <section id="typeWriterSection" class="mb-3">
         <figure id='typeWriter' class="mx-auto">
-            <h2>const myCodingJourney = () => {</h2>
-            <h2>__for (article in blog) {</h2>
-            <h2>____console.log(blog[article])</h2>
-            <h2>____}</h2>
-            <h2>};</h2>
+            <h2 id="typeWriter1"><span style="color:darkorchid;">const</span> <span style="color:lime">myCodingJourney</span> <span style='color:gray'>=</span> () <span style="color:gray">=></span> {</h2>
+            <h2 id="typeWriter2"><span style="color:rgb(50,50,50);text-shadow:none;">__</span><span style="color:darkorchid;">for</span> (<span style="color:cornflowerblue;">article</span> <span style="color:gray;">in</span> <span style="color:#00857c;">blog</span>) {</h2>
+            <h2 id="typeWriter3"><span style="color:rgb(50,50,50);text-shadow:none;">____</span><span style="color:darkred">console</span><span style='color:gray;'>.</span><span style="color:olive">log</span>(<span style="color:#00857c;">blog</span><span style='color:dodgerblue;'>[</span><span style="color:cornflowerblue;">article</span><span style='color:dodgerblue;'>]</span>)<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter4"><span style="color:rgb(50,50,50);text-shadow:none;">__</span>}</span></h2>
+            <h2 id="typeWriter5">}<span style='color:gray'>;</span></h2>
         </figure>
-    </section> -->
+    </section>
+
+    <div class="container-fluid myArticles">
+        <h3 class="text-center" style="color:gray;">These are reflections of my experience during the MIT xPro Coding Bootcamp.</h3>
+    </div>
 
     <div class="accordion myBlog mx-auto">
 
@@ -88,7 +86,7 @@
                 <button id='blog3Button' onclick="blog3Open()" class="accordion-button collapsed bg-transparent"
                     type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
                     aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                    <h6>blog[3]</h6>
+                    <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">3</span><span style='color:dodgerblue'>]</span></h6>
                     <h5>Pac-Man Mini-Game</h5>
                 </button>
             </h2>
@@ -247,7 +245,7 @@
                 <button id='blog2Button' onclick="blog2Open()" class="accordion-button collapsed bg-transparent"
                     type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo"
                     aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                    <h6>blog[2]</h6>
+                    <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">2</span><span style='color:dodgerblue'>]</span></h6>
                     <h5>Magic Ball Challenge</h5>
                 </button>
             </h2>
@@ -433,7 +431,7 @@
                 <button id='blog1Button' onclick="blog1Open()" class="accordion-button collapsed bg-transparent"
                     type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
                     aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                    <h6>blog[1]</h6>
+                    <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">1</span><span style='color:dodgerblue'>]</span></h6>
                     <h5>Creating a GitHub Website</h5>
                 </button>
             </h2>
@@ -515,7 +513,7 @@
                 <button id='blog0Button' onclick='blog0Open()' class="accordion-button collapsed bg-transparent"
                     type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
                     aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                    <h6>blog[0]</h6>
+                    <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">0</span><span style='color:dodgerblue'>]</span></h6>
                     <h5>Coding Bootcamp Introduction</h5>
                 </button>
             </h2>
