--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -72,12 +72,14 @@
 
     <section id="typeWriterSection">
         <figure id='typeWriter' class="mx-auto">
-            <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
+            <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span style='color:gray;'>.</span><span
                     style="color:darkorchid;">replace</span>(</h2>
-            <h2 id="typeWriter2"><span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical
-                    Engineer</span>',</h2>
-            <h2 id="typeWriter3"><span style="color:black">__</span>'<span style="color:lime;">Software
-                    Developer</span>');</h2>
+            <h2 id="typeWriter2"><span style="color:black;text-shadow:none;">__</span>'<span
+                    style="color: #00857c;">Pharmaceutical
+                    Engineer</span>'<span style='color:gray;'>,</span></h2>
+            <h2 id="typeWriter3"><span style="color:black;text-shadow:none;">__</span>'<span
+                    style="color:lime;">Software
+                    Developer</span>')<span style='color:gray;'>;</span></h2>
         </figure>
     </section>
 
