--- a/pages/blog.html
+++ b/pages/blog.html
@@ -65,7 +65,7 @@
         </div>
     </nav>
 
-    <section id="typeWriterSection" class="mb-3">
+    <section id="typeWriterSection" class="">
         <figure id='typeWriter' class="mx-auto">
             <h2 id="typeWriter1"><span style="color:darkorchid;">const</span> <span style="color:lime">myCodingJourney</span> <span style='color:gray'>=</span> () <span style="color:gray">=></span> {</h2>
             <h2 id="typeWriter2"><span style="color:rgb(50,50,50);text-shadow:none;">__</span><span style="color:darkorchid;">for</span> (<span style="color:cornflowerblue;">article</span> <span style="color:gray;">in</span> <span style="color:#00857c;">blog</span>) {</h2>
