--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typeWritercTL.css">
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
     <title>codeByPete</title>
@@ -46,7 +46,7 @@
                         <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../pages/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/blog.html">Blog</a>
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="../pages/projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/contact.html">Contact</a>
+                        <a class="nav-link active" href="../pages/contact.html">Contact</a>
                     </li>
                 </ul>
                 <!-- <form class="d-flex">
@@ -80,42 +80,73 @@
     </section>
 
     <div id="greetingPic">
-        <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
+        <img src="../pics/about/crushItApple.jpg" class='img-fluid' alt="Core Nutritionals logo with Apple logo glowing behind.">
     </div>
 
-    <div id="myIntro" class="myArticles container-fluid">
-        <h2>Hello,</h2>
-        <p>My name is <span class="menloRegular text-white">Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
-        <p>'Medicine is my destiny,' or so I was told.  I have a <span>Bachelor's Degree</span> in <span>Biological Sciences</span>, and my <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> was in the <span>Pharmaceutical Engineering</span> space for over two decades.</p>
-        <p>At the mid-point of my career, I decided to pursue my <span>childhood dream</span> of being a <span class="menloRegular text-white">Software Developer</span>.</p>
-        <p>Please join me, on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
-        <div class="row">
-            <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
-            <p class="col-sm-11 text-end">Best Regards,<br>Pete Chu</p>
-        </div>
-    </div>
-
-    <div id="personal" class="myArticles container-fluid">
-        <h1 class="text-center mb-4">Personal Stuff</h1>
-        <div class="row">
-            <div class="col-sm-4 text-center">
-                <a href="https://www.issaonline.com/" target="_blank"><img src="../pics/about/issa_logo.gif" class='img-fluid img-round my-auto' alt="International Sports Sciences Association Logo"></a>
+    <div class="container-fluid myArticles row">
+        <div class="col-sm-7">
+            <div class="d-flex gap-3">
+                <a href="https://www.google.com/maps/place/Horsham,+PA" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/locationIcon.gif" alt="Location Icon"></a>
+                <h6 class="my-auto">Horsham, PA USA</h6>
             </div>
-            <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
-            <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+            <div class="d-flex gap-3">
+                <img class='img-fluid contactLogo' src="../pics/contact/emailIcon.gif" alt="Email Icon">
+                <h6 class="my-auto">codeTrackLift@gmail.com</h6>
+            </div>
+            <div class="d-flex gap-3">
+                <img class='img-fluid contactLogo' src="../pics/contact/phoneIcon.gif" alt="Phone Icon">
+                <h6 class="my-auto">(302)570-0076</h6>
+            </div>
         </div>
-        <div class='row'>
-            <p class="col-sm-4"><span>Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
-            <p class="col-sm-7"><span>Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training</span>.<span>'</span></p>
+        <div class="col-sm-5">
+            <div class="d-flex gap-3">
+                <a href="https://github.com/codetracklift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/GitHub-Mark-Light-64px.png" alt="Git Hub Logo"></a>
+                <h6 class="my-auto">@codeTrackLift</h6>
+            </div>
+            <div class="d-flex gap-3">
+                <a href="https://twitter.com/codeTrackLift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Logo"></a>
+                <h6 class="my-auto">@codeTrackLift</h6>
+            </div>
+            <div class="d-flex gap-3">
+                <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/linkedin_white.png" alt="LinkedIn Logo"></a>
+                <h6 class="my-auto">@codeByPete</h6>
+            </div>
         </div>
-        <div class="row">
-            <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
-            <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
-            <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
+    </div>
+
+    <div id='contact' class='myArticles container-fluid mt-4'>
+        <div class="text-center">
+            <h1 style="color:darkorchid">Contact Me!</h1>
+            <h5 style="color:gray;">Interested in chatting about code?</h5>
         </div>
-        <div class="row">
-            <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span>driven</span> in circles as fast as I can.</p>
-            <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span>'This is the way</span>.<span>'</span></p>
+        <div class='container-fluid'>
+            <form class='' action="https://formsubmit.co/codetracklift@gmail.com" method="POST">
+                <div class='form-item row'>
+                    <label class='col-sm-2' for="">Name: </label>
+                    <input class='col-sm-10' type="text" name='name' placeholder='Full Name (Required)' required>
+                </div>
+                <div class='form-item row'>
+                    <label class='col-sm-2' for="">Company: </label>
+                    <input class='col-sm-10' type="tel" name="company" placeholder='Company Name (Optional)'>
+                </div>
+                <div class='form-item row'>
+                    <label class='col-sm-2' for="">Phone: </label>
+                    <input class='col-sm-10' type="tel" name="phone" placeholder='xxx-xxx-xxxx (Optional)'>
+                </div>
+                <div class='form-item row'>
+                    <label class='col-sm-2' for="">Email:</label>
+                    <input class='col-sm-10' type="email" name='email' placeholder="your_email@domain.com (Required)" required>
+                </div>
+                <div class='form-item row'>
+                    <label class='col-sm-2' for="">Message:</label>
+                    <textarea class='col-sm-10' name="message" cols="30" rows="10" placeholder="Why do you love code? (Required)" required></textarea>
+                </div>
+                <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
+                <input type="hidden" name="_template" value="basic">
+                <div class="text-center">
+                    <button id='emailButton' class='btn btn-secondary text-center'>Send Email</button>
+                </div>
+            </form>
         </div>
     </div>
 
