--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -42,16 +42,19 @@
                         <a class="nav-link active" aria-current="page" href="../pages/welcome.html">Welcome</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../pages/about.html">About Me</a>
+                        <a class="nav-link" aria-current="page" href="../pages/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/blog.html">My Blog</a>
+                        <a class="nav-link" href="../pages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/contact.html">Contact</a>
                     </li>
                 </ul>
                 <!-- <form class="d-flex">
