--- a/pages/contact.html
+++ b/pages/contact.html
@@ -120,14 +120,14 @@
             <h5 style="color:gray;">Interested in chatting about code?</h5>
         </div>
         <div class='container-fluid'>
-            <form class='' action="https://formsubmit.co/codetracklift@gmail.com" method="POST">
+            <form class='' action="https://formsubmit.co/f61adf2ff38bc5c4deb30cb261bf1ec0" method="POST">
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Name: </label>
                     <input class='col-sm-10' type="text" name='name' placeholder='Full Name (Required)' required>
                 </div>
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Company: </label>
-                    <input class='col-sm-10' type="tel" name="company" placeholder='Company Name (Optional)'>
+                    <input class='col-sm-10' type="text" name="company" placeholder='Company Name (Optional)'>
                 </div>
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Phone: </label>
