--- a/pages/about.html
+++ b/pages/about.html
@@ -85,9 +85,9 @@
 
     <div id="myIntro" class="myArticles container-fluid">
         <h2>Hello,</h2>
-        <p>My name is <span class="menloRegular text-white">Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
+        <p>My name is <span class="menloRegular" style="color:chocolate">Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
         <p>'Medicine is my destiny,' or so I was told.  I have a <span>Bachelor's Degree</span> in <span>Biological Sciences</span>, and my <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> was in the <span>Pharmaceutical Engineering</span> space for over two decades.</p>
-        <p>At the mid-point of my career, I decided to pursue my <span>childhood dream</span> of being a <span class="menloRegular text-white">Software Developer</span>.</p>
+        <p>At the mid-point of my career, I decided to pursue my <span>childhood dream</span> of being a <span class="menloRegular" style="color:darkorchid">Software Developer</span>.</p>
         <p>Please join me, on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
         <div class="row">
             <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
@@ -105,8 +105,8 @@
             <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
         </div>
         <div class='row'>
-            <p class="col-sm-4"><span>Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
-            <p class="col-sm-7"><span>Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training</span>.<span>'</span></p>
+            <p class="col-sm-4"><span style="color:darkorchid">Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
+            <p class="col-sm-7"><span style="color:chocolate">Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training</span>.<span>'</span></p>
         </div>
         <div class="row">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
@@ -114,8 +114,8 @@
             <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
         </div>
         <div class="row">
-            <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span>driven</span> in circles as fast as I can.</p>
-            <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span>'This is the way</span>.<span>'</span></p>
+            <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span style="color:chocolate">driven</span> in circles as fast as I can.</p>
+            <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span style="color:darkorchid">'This is the way</span>.<span style="color:darkorchid">'</span></p>
         </div>
     </div>
 
