contact pic ratio, typewriter colors

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,6 +21,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/typeWritercTL.css">
     <link rel="stylesheet" href="../css/projects.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
@@ -68,10 +69,18 @@
         </div>
     </nav>
 
+    <section id="typeWriterSection">
+        <figure id='typeWriter' class="mx-auto">
+            <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span style="color:cornflowerblue">alive</span>) {</h2>
+            <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter5">}</h2>
+        </figure>
+    </section>
+
     <div class="container-fluid myArticles">
-        <h1>Thanks for checking out my Projects!</h1>
-        <hr style="color:transparent;">
-        <h3>There will be more to come, please visit again.</h3>
+        <h3>More projects are in development, please visit again.</h3>
     </div>
 
     <div id='myProjects' class="row container-fluid justify-content-center">
