--- a/pages/blog.html
+++ b/pages/blog.html
@@ -72,7 +72,7 @@
         <figure id='typeWriter' class="mx-auto">
             <h2 id="typeWriter1"><span style="color:darkorchid;">const</span> <span style="color:lime">myCodingJourney</span> <span style='color:gray'>=</span> () <span style="color:gray">=></span> {</h2>
             <h2 id="typeWriter2"><span style="color:rgb(50,50,50);text-shadow:none;">__</span><span style="color:darkorchid;">for</span> (<span style="color:cornflowerblue;">article</span> <span style="color:gray;">in</span> <span style="color:#00857c;">blog</span>) {</h2>
-            <h2 id="typeWriter3"><span style="color:rgb(50,50,50);text-shadow:none;">____</span><span style="color:darkred">console</span><span style='color:gray;'>.</span><span style="color:olive">log</span>(<span style="color:#00857c;">blog</span><span style='color:dodgerblue;'>[</span><span style="color:cornflowerblue;">article</span><span style='color:dodgerblue;'>]</span>)<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter3"><span style="color:rgb(50,50,50);text-shadow:none;">____</span><span style="color:brown">console</span><span style='color:gray;'>.</span><span style="color:olive">log</span>(<span style="color:#00857c;">blog</span><span style='color:dodgerblue;'>[</span><span style="color:cornflowerblue;">article</span><span style='color:dodgerblue;'>]</span>)<span style='color:gray;'>;</span></h2>
             <h2 id="typeWriter4"><span style="color:rgb(50,50,50);text-shadow:none;">__</span>}</span></h2>
             <h2 id="typeWriter5">}<span style='color:gray'>;</span></h2>
         </figure>
