--- a/pages/about.html
+++ b/pages/about.html
@@ -87,7 +87,7 @@
         <h2>Hello,</h2>
         <p>My name is <span class="menloRegular" style="color:chocolate">Pete</span> and I <span>grew up in the 90s</span>.  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
         <p>'Medicine is my destiny,' or so I was told.  I have a <span>Bachelor's Degree</span> in <span>Biological Sciences</span>, and my <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> was in the <span>Pharmaceutical Engineering</span> space for over two decades.</p>
-        <p>At the mid-point of my career, I decided to pursue my <span>childhood dream</span> of being a <span class="menloRegular" style="color:darkorchid">Software Developer</span>.</p>
+        <p>At the mid-point of my career, I enrolled in a <span>Full Stack Coding Bootcamp</span> to pursue my <span>childhood dream</span> of being a <span class="menloRegular" style="color:darkorchid">Software Developer</span>.</p>
         <p>Please join me, on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
         <div class="row">
             <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
