--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,7 +88,7 @@
             <h1 style="color:darkorchid">Let's Connect!</h1>
             <h5 style="color:gray;">Interested in chatting about code?</h5>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5 my-auto">
             <div class="d-flex gap-3">
                 <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/linkedin_white.png" alt="LinkedIn Logo"></a>
                 <h6 class="my-auto">@codeByPete</h6>
@@ -97,14 +97,22 @@
                 <a href="https://github.com/codetracklift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/GitHub-Mark-Light-64px.png" alt="Git Hub Logo"></a>
                 <h6 class="my-auto">@codeTrackLift</h6>
             </div>
-        </div>
-        <div class="col-sm-6">
             <div class="d-flex gap-3">
                 <a href="https://twitter.com/codeTrackLift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Logo"></a>
                 <h6 class="my-auto">@codeTrackLift</h6>
             </div>
+        </div>
+        <div class="col-sm-7 my-auto">
+            <div class="d-flex gap-3" style="margin-bottom:-0.125rem;">
+                <a href="mailto:codeTrackLift@gmail.com" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/emailIcon.gif" alt="Email icon."></a>
+                <img src="../pics/contact/emailGmail.gif" class="img-fluid" style='max-width:15rem;margin-left:-0.5rem;' alt="Email picture">
+            </div>
             <div class="d-flex gap-3">
-                <a href="https://goo.gl/maps/99RfesTSTFK8ifAVA" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/locationIcon.gif" alt="Location Icon"></a>
+                <img class='img-fluid contactLogo' src="../pics/contact/phoneIcon.gif" alt="Phone icon."></a>
+                <img src="../pics/contact/phoneGvoice.gif" class="img-fluid py-2" style='max-width:7rem;margin-left:-0.25rem;' alt="Phone number picture">
+            </div>
+            <div class="d-flex gap-3" style="margin-top: -0.25rem;">
+                <a href="https://goo.gl/maps/zvaZenYgiZJq4MrD7" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/locationIcon.gif" alt="Location Icon"></a>
                 <h6 class="my-auto">Philadelphia, PA USA</h6>
             </div>
         </div>
@@ -113,7 +121,7 @@
 
     <div id='contact' class='myArticles container-fluid mt-4'>
         <div id='emailIcon' class="text-center">
-            <img class='img-fluid' src="../pics/contact/emailIcon.gif" alt="Email Icon"><span>E-Mail Me</span>
+            <img class='img-fluid' src="../pics/contact/emailIcon.gif" alt="Email Icon"><span>Message Me</span>
         </div>
         <div class='container-fluid'>
             <form class='' action="https://formsubmit.co/f61adf2ff38bc5c4deb30cb261bf1ec0" method="POST">
@@ -121,14 +129,6 @@
                     <label class='col-sm-2' for="">Name: </label>
                     <input class='col-sm-10' type="text" name='name' placeholder='Your Name (Required)' required>
                 </div>
-                <!-- <div class='form-item row'>
-                    <label class='col-sm-2' for="">Company: </label>
-                    <input class='col-sm-10' type="text" name="company" placeholder='Company Name (Optional)'>
-                </div>
-                <div class='form-item row'>
-                    <label class='col-sm-2' for="">Phone: </label>
-                    <input class='col-sm-10' type="tel" name="phone" placeholder='xxx-xxx-xxxx (Optional)'>
-                </div> -->
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Email:</label>
                     <input class='col-sm-10' type="email" name='email' placeholder="your_email@domain.com (Required)" required>
@@ -140,14 +140,14 @@
                 <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
                 <input type="hidden" name="_template" value="basic">
                 <div class="text-center">
-                    <button id='emailButton' class='btn btn-secondary text-center'>Send Email</button>
+                    <button id='emailButton' class='btn btn-secondary text-center'>Send Message</button>
                 </div>
             </form>
         </div>
     </div>
 
     <div id='googleMap' class="container-fluid text-center">
-        <iframe class='' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d783016.4387251107!2d-75.87194969440895!3d39.9490398101001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c191f3adf4a9%3A0x4066eeee7bc551d0!2sPhiladelphia%20Metropolitan%20Area!5e0!3m2!1sen!2sus!4v1646398004514!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1976040.4504721882!2d-76.43266417409015!3d39.943936309783176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c191f3adf4a9%3A0x4066eeee7bc551d0!2sPhiladelphia%20Metropolitan%20Area!5e1!3m2!1sen!2sus!4v1646411057945!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
     </div>
         
     <footer class="container-fluid">
