--- a/pages/contact.html
+++ b/pages/contact.html
@@ -108,7 +108,7 @@
                 <img src="../pics/contact/emailGmail.gif" class="img-fluid" style='max-width:15rem;margin-left:-0.5rem;' alt="Email picture">
             </div>
             <div class="d-flex gap-3">
-                <img class='img-fluid contactLogo' src="../pics/contact/phoneIcon.gif" alt="Phone icon."></a>
+                <img class='img-fluid contactLogo' src="../pics/contact/phoneIcon.gif" alt="Phone icon.">
                 <img src="../pics/contact/phoneGvoice.gif" class="img-fluid py-2" style='max-width:7rem;margin-left:-0.25rem;' alt="Phone number picture">
             </div>
             <div class="d-flex gap-3" style="margin-top: -0.25rem;">
