about personal my4

--- a/pages/about.html
+++ b/pages/about.html
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    <div id="personal" class="myArticles container-fluid">
+    <div id="personal" class="myArticles container-fluid my-4">
         <h1 class="text-center mb-4">Personal Stuff</h1>
         <div class="row">
             <div class="col-sm-4 text-center">
