--- a/pages/contact.html
+++ b/pages/contact.html
@@ -86,11 +86,11 @@
     <div class="container-fluid myArticles row">
         <div class="text-center">
             <h1 style="color:darkorchid">Let's Connect!</h1>
-            <h5 style="color:gray;">Interested in chatting about code?</h5>
+            <h5 style="color:gray;">Interested in code?</h5>
         </div>
         <div class="col-sm-5 my-auto">
             <div class="d-flex gap-3">
-                <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/linkedin_white.png" alt="LinkedIn Logo"></a>
+                <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid p-1 contactLogoSquare' src="../pics/linkedin_white.png" alt="LinkedIn Logo"></a>
                 <h6 class="my-auto">@codeByPete</h6>
             </div>
             <div class="d-flex gap-3">
