--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -21,6 +21,8 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/welcomeAnimations.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/welcome.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
@@ -73,7 +75,7 @@
         </figure>
     </div>
 
-    <section id="typeWriterSection">
+    <section id="typeWriterSection" class="mb-5">
         <figure id='typeWriter' class="mx-auto">
             <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span style='color:gray;'>.</span><span
                     style="color:darkorchid;">replace</span>(</h2>
@@ -85,6 +87,27 @@
                     Developer</span>')<span style='color:gray;'>;</span></h2>
         </figure>
     </section>
+
+    <!-- <section id="mySection" class="row container-fluid justify-content-center">
+        <div class="card col-sm-4" style="width: 18rem;">
+            <img src="../pics/pacman/pacman_icon.png" class="card-img-top mx-auto py-4" alt="Pac Man image"
+                style="width:10rem;">
+            <div class="card-body">
+                <h5 class="card-title">Pac-Man Mini-Game</h5>
+                <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/"
+                        target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
+                    and JavaScript.</p>
+                <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs! See <a
+                        href='../pages/blog.html#blog3'>Blog Post</a>.</p>
+                <div class="btnContainer">
+                    <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
+                        Game</a>
+                    <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
+                        target="'_blank">View Repo</a>
+                </div>
+            </div>
+        </div>
+    </section> -->
 
     <footer class="container-fluid fixed-bottom">
         <p>Copyright ©
