--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typeWritercTL.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/projects.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
